<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="20dp"
    android:background="@color/dirtywhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <!-- Back Button -->
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/arrow_back"
            android:contentDescription="@string/Back_button"
            android:layout_gravity="start"
            android:padding="8dp"
            android:background="?attr/selectableItemBackgroundBorderless" />

        <!-- Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Edit"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:textColor="@color/green" />

        <!-- Name -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Name1"
            android:textSize="20sp"
            android:textColor="@color/green" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:textColor="@color/black"
            android:hint="Enter new name..."
            android:padding="12dp"
            android:textSize="16sp"
            android:enabled="true"
             />

        <!-- Username -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:textColor="@color/black"
            android:hint="Enter new password..."
            android:padding="12dp"
            android:textSize="16sp"
            android:enabled="true"
             />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Userame"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:textColor="@color/black"
            android:hint="Enter new username..."
            android:padding="12dp"
            android:textSize="16sp"
            android:enabled="true"
             />

        <!-- Gender -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Gender"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:layout_marginTop="10dp" />

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:textColor="@color/black"
            android:padding="12dp"
            android:entries="@array/gender_options"
             />

        <!-- Phone Number -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Number"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:textColor="@color/black"
            android:hint="Enter phone..."
            android:padding="12dp"
            android:textSize="16sp"
            android:enabled="true" />

        <!-- Email -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Email1"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:textColor="@color/black"
            android:hint="Enter new email..."
            android:padding="12dp"
            android:textSize="16sp"
            android:enabled="true" />

        <!-- Save Button -->
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/save"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="20dp" />
    </LinearLayout>
</ScrollView>
