<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_bkg"
    android:clipToOutline="true"
    android:padding="16dp">

    <!-- Заглавие -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_choose"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>

    <!-- Бутон за преминаване в BeenThere -->
    <Button
        android:id="@+id/btnBeenThere"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_beenthere"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Бутон за преминаване в Plan -->
    <Button
        android:id="@+id/btnPlan"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_plan"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnBeenThere"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Бутон за изтриване от Wishlist -->
    <Button
        android:id="@+id/btnRemove"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_delete"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnPlan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
