<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Profile"
    android:background="@color/dirtywhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/top_view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentTop="true"
                android:background="@color/grey" />

            <RelativeLayout
                android:id="@+id/top_view1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/dirtywhite">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/profile_picture_shape"
                    android:clickable="true"
                    android:contentDescription="@string/Profile_picture"
                    android:focusable="true"
                    android:padding="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/baseline_person_24" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView5"
                    android:layout_centerHorizontal="true"
                    android:text="@string/profile_nickname"
                    android:textColor="@color/green"
                    android:textSize="20sp"
                    android:layout_marginTop="16dp"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/top_view1"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@color/dirtywhite">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="7dp"
                    android:background="@color/dirtywhite"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginTop="0dp">

                    <ImageView
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:src="@drawable/person"
                        android:background="@drawable/circle_bkg"
                        android:padding="4dp"/>

                    <TextView
                        android:id="@+id/ProfileName"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/Name"
                        android:textSize="16sp"
                        android:paddingStart="12dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="7dp"
                    android:background="@color/dirtywhite"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginTop="16dp">

                    <ImageView
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:src="@drawable/email"
                        android:background="@drawable/circle_bkg"
                        android:padding="4dp"/>

                    <TextView
                        android:id="@+id/ProfileEmail"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="16sp"
                        android:paddingStart="12dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="7dp"
                    android:background="@color/dirtywhite"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginTop="16dp">

                    <ImageView
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:src="@drawable/gender"
                        android:background="@drawable/circle_bkg"
                        android:padding="4dp"/>

                    <TextView
                        android:id="@+id/ProfileGender"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textSize="16sp"
                        android:paddingStart="12dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="7dp"
                    android:background="@color/dirtywhite"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginTop="16dp">

                    <ImageView
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:src="@drawable/phone"
                        android:background="@drawable/circle_bkg"
                        android:padding="4dp"/>

                    <TextView
                        android:id="@+id/profilePhoneTextView"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/number"
                        android:textSize="16sp"
                        android:paddingStart="12dp"/>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/btnEditProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="7dp"
                    android:background="@color/dirtywhite"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginTop="16dp">

                    <ImageView
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:src="@drawable/edit"
                        android:background="@drawable/circle_bkg"
                        android:padding="4dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="РЕДАКТИРАНЕ"
                        android:textSize="16sp"
                        android:paddingStart="12dp"/>

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/arrow_forward"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btnGallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="7dp"
                    android:background="@color/dirtywhite"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginTop="16dp">

                    <ImageView
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:src="@drawable/photos"
                        android:background="@drawable/circle_bkg"
                        android:padding="4dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/galery"
                        android:textSize="16sp"
                        android:paddingStart="12dp"/>

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/arrow_forward"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="50dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelVisibilityMode="unlabeled"
            android:background="@android:color/transparent"
            app:itemIconTint="@android:color/white"
            app:itemTextColor="@color/white"
            app:menu="@menu/bottom_menu2" />
    </com.google.android.material.bottomappbar.BottomAppBar>



</androidx.coordinatorlayout.widget.CoordinatorLayout>
